# contradiction

./: .gitignore  Cargo.toml  README.md
contradiction-cli/: Cargo.toml
contradiction-models/: Cargo.toml
contradiction-models/src/: circuit_inputs.rs  lib.rs  requests.rs  responses.rs
contradiction-node/: Cargo.toml  README.md
contradiction-node/src/: config.rs  db.rs  handler.rs  main.rs  models.rs  routes.rs  routes_risc0.rs
contradiction-node/src/circuits/: halo2_hypotoneuse.rs
contradiction-node/src/risc0/: executor.rs  mod.rs  models.rs  routes.rs
contradiction-risc0/: Cargo.toml
contradiction-risc0-host/src/: main.rs
contradiction-risc0-methods/: Cargo.toml
contradiction-risc0-methods/hypotenuse/: Cargo.toml
contradiction-risc0-methods/hyptonuse/: Cargo.toml
contradiction-risc0-methods/hyptonuse/src/: main.rs
contradiction-risc0-methods/linear-polynomial/: Cargo.toml
contradiction-risc0/hypotenuse/src/: main.rs
contradiction-risc0/src/: lib.rs  models.rs
