[package]
name = "contradiction-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
contradiction-models = { path = "../contradiction-models" }
http-body-util = "0.1.0"
hyper = {version = "1.1.0", features = ["server", "http1"]}
hyper-util = {version = "0.1.3", features = ["tokio"]}
serde = "1.0.196"
sqlx = {version = "0.7.3", features = [ "runtime-tokio", "tls-native-tls", "sqlite"]}
tokio = {version = "1.36.0", features = ["net", "rt", "macros", "rt-multi-thread"]}
toml = "0.8.9"
