[package]
name = "contradiction-risc0-methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "0.20.1" }

[dependencies]
anyhow = "1.0.79"   
risc0-zkvm = { version = "0.20.1" }
serde = "1.0.196"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.risc0]
methods = ["hypotenuse"]